data aos all set to once

--- a/templates/template_birthday_3/index.html
+++ b/templates/template_birthday_3/index.html
@@ -25,7 +25,7 @@
     <nav>
         <div class="container-fluid">
             <div class="row d-none d-lg-block">
-                <div  data-aos="fade-down" class="offset-lg-3 col-lg-9 pr-lg-0">
+                <div  data-aos="fade-down"  data-aos-once="true" class="offset-lg-3 col-lg-9 pr-lg-0">
                     <ul class="menu">
                         <li><a href="index.html">HOME</a></li>
                         <li><a href="#about">ABOUT</a></li>
@@ -55,13 +55,13 @@
         </div>
     </nav>
     <!-- Section Banner -->
-    <section  data-aos="zoom-out" id="banner">
+    <section  data-aos="zoom-out"  data-aos-once="true" id="banner">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-12 pl-lg-0 pr-lg-0">
                     <div class="box">
-                        <div  data-aos="fade-up" class="subtitle ts">You are</div>
-                        <div  data-aos="fade-up" class="title ts">Cordially Invited</div>
+                        <div  data-aos="fade-up"  data-aos-once="true" class="subtitle ts">You are</div>
+                        <div  data-aos="fade-up"  data-aos-once="true" class="title ts">Cordially Invited</div>
                     </div>
                     <img class="img-fluid w-lg-100p d-none d-lg-block" src="images/image-01.png" />
                     <img class="img-fluid w-lg-100p d-block d-lg-none" src="images/mobile-image-01.png" />
@@ -79,12 +79,12 @@
                     <img class="img-fluid motif w-lg-100p d-none d-lg-block" src="images/image-03.png" />
                     <img class="img-fluid motif w-lg-100p d-block d-lg-none" src="images/mobile-image-03.png" />
                     <div class="boxc text-center">
-                        <div data-aos="fade-down" >
+                        <div data-aos="fade-down"  data-aos-once="true" >
                         <h2 class="font-gold ts">Christine’s</h2>
                         <h2 class="font-white ts mb-m-25 mb-lg-40">3<sup>rd</sup> Birthday</h2>
                         </div>
                         <div class="line-white w-lg-10p ma-lg mb-m-25 mb-lg-45"></div>
-                        <div data-aos="fade-up" data-aos-offset="-70" class="w-m-80p w-lg-25p ma-lg font-white">
+                        <div data-aos="fade-up"  data-aos-once="true" data-aos-offset="-70" class="w-m-80p w-lg-25p ma-lg font-white">
                             <p>Please join us in celebration of Christine’s third birthday. It’s a party and you are cordially invited.</p>
                         </div>
                     </div>
@@ -97,7 +97,7 @@
         <div class="container-fluid pos-rel">
             <div class="row">
                 <div class="col-lg-12 pl-lg-0 pr-lg-0">
-                    <img data-aos="fade-up" data-aos-offset="300" class="img-fluid bg d-none d-lg-block w-lg-100p" src="images/image-04-new.png" />
+                    <img data-aos="fade-up"  data-aos-once="true" data-aos-offset="300" class="img-fluid bg d-none d-lg-block w-lg-100p" src="images/image-04-new.png" />
                     <img class="img-fluid bg d-block d-lg-none w-lg-100p" src="images/mobile-image-04.png" />
                     <div class="box text-center">
                         <div class="mb-m-5p mb-lg-10p">
@@ -122,9 +122,9 @@
                         <div class="container-fluid pl-m-10p pr-m-10p pl-lg-25p pr-lg-25p">
                             <div class="row text-center">
                                 <div class="col-lg-12">
-                                    <img data-aos="fade-down" data-aos-offset="-100" class="img-fluid w-m-60p" src="images/image-07.png" />
-                                    <h2  data-aos="fade-up" data-aos-offset="-250" class="font-gold ts">Mark it on</h2>
-                                    <h2  data-aos="fade-up" data-aos-offset="-300" class="font-white ts mb-m-10p mb-lg-10p">Your Calendar</h2>
+                                    <img data-aos="fade-down"  data-aos-once="true" data-aos-offset="-100" class="img-fluid w-m-60p" src="images/image-07.png" />
+                                    <h2  data-aos="fade-up"  data-aos-once="true" data-aos-offset="-250" class="font-gold ts">Mark it on</h2>
+                                    <h2  data-aos="fade-up"  data-aos-once="true" data-aos-offset="-300" class="font-white ts mb-m-10p mb-lg-10p">Your Calendar</h2>
                                 </div>
                                 <div class="col-6 col-lg-6">
                                     <div class="box font-grey">
@@ -167,8 +167,8 @@
                 <img class="img-fluid bg d-block d-lg-none w-lg-100p" src="images/mobile-image-07-01.png" />
                 <img class="img-fluid bg2 d-block d-lg-none w-lg-100p" src="images/mobile-image-07-02.png" />
                 <div class="col-lg-12">
-                    <img data-aos="fade-down" class="img-fluid w-m-50p" src="images/image-10.png" />
-                    <div data-aos="fade-up">
+                    <img data-aos="fade-down"  data-aos-once="true" class="img-fluid w-m-50p" src="images/image-10.png" />
+                    <div data-aos="fade-up"  data-aos-once="true">
                     <h2 class="font-gold ts">Looking Forward</h2>
                     <h2 class="font-bluesky ts mb-lg-8p">to Hear Your Response</h2>
                     </div>
