--- a/templates/template_wedding_10/index.html
+++ b/templates/template_wedding_10/index.html
@@ -25,7 +25,7 @@
         <nav>
             <div class="container-fluid">
                 <div class="row d-none d-lg-block">
-                    <div data-aos="fade-down" class="col-lg-12 pr-lg-0">
+                    <div data-aos="fade-down" data-aos-once="true" class="col-lg-12 pr-lg-0">
                         <ul class="menu">
                             <li><a href="#ourstory">+ Our Story</a></li>
                             <li><a href="#gallery">+ Gallery</a></li>
@@ -67,7 +67,7 @@
                         <img class="motif3 d-none d-lg-block" src="images/motif-03.png" />
                         <img class="motif2 d-block d-lg-none" src="images/mobile-motif-02.png" />
                         <div class="boxc text-center">
-                            <div data-aos="fade-up">
+                            <div data-aos="fade-up" data-aos-once="true">
                                 <h6>OCTOBER 18TH 2020</h6>
                                 <h1>Lucas & Eliza</h1>
                             </div>
@@ -92,7 +92,7 @@
                 <div class="row">
                     <div class="col-lg-12 pl-m-10p pr-m-10p pt-lg-5p pb-lg-10p pl-lg-5p pr-lg-5p text-center">
                         <h6 class="mb-m-10p mb-lg-3p">OUR STORY</h6>
-                        <div data-aos="fade-up" class="w-m-100p w-lg-70p ma-lg">
+                        <div data-aos="fade-up" data-aos-once="true" class="w-m-100p w-lg-70p ma-lg">
                             <p>
                                 Once upon a time, we stumbled upon this beautiful city in Manila, Malaysia. And ever since we met we just clicked right away, we do everything together, we’ve been through so much together, and now we’re the most grateful to soon called each other husband and wife.
                             </p>
@@ -102,11 +102,11 @@
                         <div class="wrap">
                             <div class="row">
                                 <div class="col-lg-6 mb-m-10p">
-                                    <h2 data-aos="fade-right" class="mb-lg-10p">
+                                    <h2 data-aos="fade-right" data-aos-once="true" class="mb-lg-10p">
                                         6 facts<br />
                                         about us
                                     </h2>
-                                    <p data-aos="fade-right">
+                                    <p data-aos="fade-right" data-aos-once="true">
                                         We have a LOT in common. So these are some of the fun facts about us!
                                     </p>
                                 </div>
@@ -180,7 +180,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div data-aos="fade-up" class="col-lg-3 d-none d-lg-block text-center">
+                                <div data-aos="fade-up" data-aos-once="true" class="col-lg-3 d-none d-lg-block text-center">
                                     <div class="box">
                                         <div class="boxc">
                                             <img class="img-fluid" src="images/icon-01.png" />
@@ -191,7 +191,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div data-aos="fade-up" class="col-lg-3 d-none d-lg-block text-center">
+                                <div data-aos="fade-up" data-aos-once="true" class="col-lg-3 d-none d-lg-block text-center">
                                     <div class="box">
                                         <div class="boxc">
                                             <img class="img-fluid" src="images/icon-02.png" />
@@ -202,7 +202,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div data-aos="fade-up" class="col-lg-3 d-none d-lg-block text-center">
+                                <div data-aos="fade-up" data-aos-once="true" class="col-lg-3 d-none d-lg-block text-center">
                                     <div class="box">
                                         <div class="boxc">
                                             <img class="img-fluid" src="images/icon-03.png" />
@@ -213,7 +213,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div data-aos="fade-up" class="col-lg-3 d-none d-lg-block text-center">
+                                <div data-aos="fade-up" data-aos-once="true" class="col-lg-3 d-none d-lg-block text-center">
                                     <div class="box">
                                         <div class="boxc">
                                             <img class="img-fluid" src="images/icon-04.png" />
@@ -224,7 +224,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div data-aos="fade-up" class="col-lg-3 d-none d-lg-block text-center">
+                                <div data-aos="fade-up" data-aos-once="true" class="col-lg-3 d-none d-lg-block text-center">
                                     <div class="box">
                                         <div class="boxc">
                                             <img class="img-fluid" src="images/icon-05.png" />
@@ -235,7 +235,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div data-aos="fade-up" class="col-lg-3 d-none d-lg-block text-center">
+                                <div data-aos="fade-up" data-aos-once="true" class="col-lg-3 d-none d-lg-block text-center">
                                     <div class="box">
                                         <div class="boxc">
                                             <img class="img-fluid" src="images/icon-06.png" />
@@ -262,8 +262,8 @@
                         <img class="img-fluid boxc d-none d-lg-block motif2" src="images/motif-05.png" />
                         <img class="img-fluid boxc d-block d-lg-none motif" src="images/mobile-motif-04.png" />
                         <img class="img-fluid boxc d-block d-lg-none motif2" src="images/mobile-motif-05.png" />
-                        <h6 data-aos="fade-up" class="mb-m-15p mb-lg-5p mt-lg-5p">OUR GALLERY</h6>
-                        <div data-aos="fade-down" class="three-carousel owl-theme d-none d-lg-block">
+                        <h6 data-aos="fade-up" data-aos-once="true" class="mb-m-15p mb-lg-5p mt-lg-5p">OUR GALLERY</h6>
+                        <div data-aos="fade-down" data-aos-once="true" class="three-carousel owl-theme d-none d-lg-block">
                             <div class="item">
                                 <div class="wrap">
                                     <div class="boximg">
@@ -377,7 +377,7 @@
                         <img class="img-fluid images w-lg-100p" src="images/images-05.png" />
                         <div class="wrap">
                             <div class="row">
-                                <div data-aos="fade-up" data-aos-offset="-4500" class="col-lg-6 mb-m-10p pr-m-0 pl-lg-0 pr-lg-1">
+                                <div data-aos="fade-up" data-aos-once="true" data-aos-offset="-4500" class="col-lg-6 mb-m-10p pr-m-0 pl-lg-0 pr-lg-1">
                                     <img class="img-fluid images" src="images/images-06.png" />
                                     <div class="date">20 November 2020</div>
                                     <div class="day">Saturday</div>
@@ -404,7 +404,7 @@
                                         </table>
                                     </div>
                                 </div>
-                                <div data-aos="fade-up" data-aos-offset="-4500" class="col-lg-6 pl-m-0 pl-lg-1 pr-lg-0">
+                                <div data-aos="fade-up" data-aos-once="true" data-aos-offset="-4500" class="col-lg-6 pl-m-0 pl-lg-1 pr-lg-0">
                                     <img class="img-fluid images" src="images/images-07.png" />
                                     <div class="date">21 November 2020</div>
                                     <div class="day">Sunday</div>
@@ -449,7 +449,7 @@
                             <img class="img-fluid motif d-none d-lg-block" src="images/motif-08.png" />
                             <img class="img-fluid motif d-block d-lg-none" src="images/mobile-motif-06.png" />
                             <div class="boxc text-left">
-                                <div data-aos="fade-right" data-aos-offset="-5000">
+                                <div data-aos="fade-right" data-aos-once="true" data-aos-offset="-5000">
                                     <h3>Palihotel</h3>
                                     <table>
                                         <tr>
@@ -482,8 +482,8 @@
                     <img class="img-fluid motif" src="images/motif-09.png" />
                     <img class="img-fluid motif2" src="images/motif-10.png" />
                     <div class="col-lg-12 pt-m-10p pb-m-20p pl-m-10p pr-m-10p pt-lg-15p pb-lg-15p pl-lg-5p pr-lg-5p text-center">
-                        <h6 id="rsvp-d" data-aos="fade-down" data-aos-offset="-4500" class="mb-m-10p mb-lg-2p">REGISTRY</h6>
-                        <h2 data-aos="fade-up" data-aos-offset="-4500" class="mb-m-20p mb-lg-5p">Your presence is a gift</h2>
+                        <h6 id="rsvp-d" data-aos="fade-down" data-aos-once="true" data-aos-offset="-4500" class="mb-m-10p mb-lg-2p">REGISTRY</h6>
+                        <h2 data-aos="fade-up" data-aos-once="true" data-aos-offset="-4500" class="mb-m-20p mb-lg-5p">Your presence is a gift</h2>
                         <div class="brief">
                             <p>We are thrilled to welcome you to be our guest at the most unforgettable celebration of our life!</p>
                         </div>
