--- a/templates/template_wedding_2/index.html
+++ b/templates/template_wedding_2/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
     <div class="nav-wedding-2 position-absolute">
-        <div class="container-fluid py-lg-5" data-aos="fade-down">
+        <div class="container-fluid py-lg-5" data-aos="fade-down" data-aos-once="true">
             <div class="row">
                 <div class="col-lg-3 pl-lg-5">
                     <img class="img-fluid" src="images/logo-template-2-02.png">
@@ -102,9 +102,9 @@
     </div>
     <div class="container-fluid bg-grayish-blue header-home">
         <div class="row">
-            <div class="col-lg-12 px-0" data-aos="zoom-out">
+            <div class="col-lg-12 px-0" data-aos="zoom-out" data-aos-once="true">
                 <div class="content-header-home">
-                    <p data-aos="fade-up" data-aos-offset="-200" class="text-white">
+                    <p data-aos="fade-up" data-aos-once="true" data-aos-offset="-200" class="text-white">
                         This is the story of how we met.
                     </p>
                 </div>
@@ -115,13 +115,13 @@
     </div>
     <div id="our-story" class="container-fluid bg-grayish-blue">
         <div class="row py-5">
-            <div data-aos="fade-right" class="col-lg-4 offset-lg-1 py-lg-5">
+            <div data-aos="fade-right" data-aos-once="true" class="col-lg-4 offset-lg-1 py-lg-5">
                 <h2 class="text-white">
                     Once upon<br>
                     a time,
                 </h2>
             </div>
-            <div data-aos="fade-up" class="col-lg-4 offset-lg-3 py-lg-5">
+            <div data-aos="fade-up" data-aos-once="true" class="col-lg-4 offset-lg-3 py-lg-5">
                 <p class="text-white mt-lg-4 d-none d-lg-block">
                     There’s a lonely girl upon the<br>
                     hallway and far away is a man<br>
@@ -142,7 +142,7 @@
         </div>
         <div class="row" data-aos="fade-down">
             <div class="col-lg-12 px-0">
-                <img data-aos="fade-down" class="img-fluid w-100 d-none d-lg-block" src="images/about-us-04.jpg">
+                <img data-aos="fade-down" data-aos-once="true" class="img-fluid w-100 d-none d-lg-block" src="images/about-us-04.jpg">
                 <img class="img-fluid w-100 d-lg-none" src="images/mobile-about-us-04-02.jpg">
             </div>
         </div>
@@ -150,23 +150,23 @@
     <div class="container-fluid inseparable-section">
         <div class="row py-5">
             <div class="col-lg-6 p-lg-5">
-                <img data-aos="zoom-out" class="img-fluid" src="images/inseparable-05.png">
+                <img data-aos="zoom-out" data-aos-once="true" class="img-fluid" src="images/inseparable-05.png">
             </div>
             <div class="col-lg-6 py-5">
-                <h2 data-aos="fade-down" class="text-grayish-blue my-lg-5 mt-5">
+                <h2 data-aos="fade-down" data-aos-once="true" class="text-grayish-blue my-lg-5 mt-5">
                     Inseparable<br>
                     Ever Since,
                 </h2>
-                <p data-aos="fade-left" class="text-white offset-lg-2 d-none d-lg-block">
+                <p data-aos="fade-left" data-aos-once="true" class="text-white offset-lg-2 d-none d-lg-block">
                     We kinda already know we were meant for each other no matter how hard the situations are, we stick together till the end, and somehow things will go right again. Each of us didn’t even believe this was happening because it’s surreal how we always get each other back up no matter what happens, and willing to continue to do so. So then I, Peter, proceed and decided that I want Mary to be The One for my life.
                 </p>
-                <p data-aos="fade-left" class="text-white offset-lg-2 d-lg-none mt-5">
+                <p data-aos="fade-left" data-aos-once="true" class="text-white offset-lg-2 d-lg-none mt-5">
                     We kinda already know we were meant for each other no matter how hard the situations are, we stick together till the end, and somehow things will go right again. Each of us didn’t even believe this was happening because it’s surreal how we always get each other back up no matter what happens, and willing to continue to do so. So then I, Peter, proceed and decided that I want Mary to be The One for my life.
                 </p>
             </div>
         </div>
     </div>
-    <div class="container-fluid will-you" data-aos="fade-down">
+    <div class="container-fluid will-you" data-aos="fade-down" data-aos-once="true">
         <div class="row">
             <div class="col-lg-12 px-0">
                 <img class="img-fluid w-100 d-none d-lg-block" src="images/image-3-07.jpg">
@@ -193,7 +193,7 @@
     <div id="celebrate" class="container-fluid bg-celebrate">
         <div class="row">
             <div class="col-lg-4 offset-lg-1 py-lg-5 order-4 order-lg-1 col-12">
-                <img data-aos="fade-up" class="image-celebrate img-fluid mt-5" src="images/image-celebrate-03.png">
+                <img data-aos="fade-up" data-aos-once="true" class="image-celebrate img-fluid mt-5" src="images/image-celebrate-03.png">
             </div>
             <div class="col-lg-3 py-lg-5 my-lg-5 section-left order-1 order-lg-2 col-12">
                 <p class="text-white mt-lg-5">
@@ -262,7 +262,7 @@
     <div id="gallery" class="container-fluid gallery-section">
         <div id="gallerym" class="row">
             <div class="col-lg-6 offset-lg-1">
-                <h2 data-aos="fade-left" class="text-dark-blue my-lg-0 my-5">
+                <h2 data-aos="fade-left" data-aos-once="true" class="text-dark-blue my-lg-0 my-5">
                     Our Moments,<br>
                     Captured.
                 </h2>
@@ -284,37 +284,37 @@
                     <img class="img-fluid" src="images/image-item-gallery-03.jpg">
                 </a>
             </div>
-            <div data-aos="fade-up" class="p-lg-3">
+            <div data-aos="fade-up" data-aos-once="true" class="p-lg-3">
                 <a href="#" data-toggle="modal" data-target="#photo2">
                     <img class="img-fluid" src="images/image-item-gallery-04.jpg">
                 </a>
             </div>
-            <div  data-aos="fade-up"class=" p-lg-3">
+            <div  data-aos="fade-up" data-aos-once="true" class=" p-lg-3">
                 <a href="#" data-toggle="modal" data-target="#photo3">
                     <img class="img-fluid" src="images/image-item-gallery-05.jpg">
                 </a>
             </div>
-            <div  data-aos="fade-up"class=" p-lg-3">
+            <div  data-aos="fade-up" data-aos-once="true" class=" p-lg-3">
                 <a href="#" data-toggle="modal" data-target="#photo4">
                     <img class="img-fluid" src="images/image-item-gallery-06.jpg">
                 </a>
             </div>
-            <div data-aos="fade-down" class=" p-lg-3">
+            <div data-aos="fade-down"  data-aos-once="true" class=" p-lg-3">
                 <a href="#" data-toggle="modal" data-target="#photo5">
                     <img class="img-fluid" src="images/image-item-gallery-07.jpg">
                 </a>
             </div>
-            <div data-aos="fade-down" class=" p-lg-3">
+            <div data-aos="fade-down" data-aos-once="true" class=" p-lg-3">
                 <a href="#" data-toggle="modal" data-target="#photo6">
                     <img class="img-fluid" src="images/image-item-gallery-08.jpg">
                 </a>
             </div>
-            <div data-aos="fade-down" class=" p-lg-3">
+            <div data-aos="fade-down" data-aos-once="true" class=" p-lg-3">
                 <a href="#" data-toggle="modal" data-target="#photo7">
                     <img class="img-fluid" src="images/image-item-gallery-09.jpg">
                 </a>
             </div>
-            <div data-aos="fade-down" class=" p-lg-3">
+            <div data-aos="fade-down" data-aos-once="true" class=" p-lg-3">
                 <a href="#" data-toggle="modal" data-target="#photo8">
                     <img class="img-fluid" src="images/image-item-gallery-10.jpg">
                 </a>
@@ -421,7 +421,7 @@
                 </div>
             </div>
             <div id="accommodation-m" class="col-lg-5 pt-lg-4 text-center accomodation pt-lg-0 pt-5">
-                <img data-aos="fade-down" class="img-fluid mb-lg-0 mb-4" src="images/accomodation-2-05.png">
+                <img data-aos="fade-down" data-aos-once="true" class="img-fluid mb-lg-0 mb-4" src="images/accomodation-2-05.png">
                 <p class="text-dark-blue font-weight-bold mb-0">
                     ACCOMMODATION
                 </p>
