--- a/templates/template_wedding_8/index.html
+++ b/templates/template_wedding_8/index.html
@@ -24,9 +24,9 @@
         <nav>
             <div class="d-none d-lg-block">
                 <a class="logo" href="index.html">
-                    <img data-aos="fade-down" class="img-fluid" src="images/logo.png" />
+                    <img data-aos="fade-down"  data-aos-once="true" class="img-fluid" src="images/logo.png" />
                 </a>
-                <ul data-aos="fade-right" class="menu">
+                <ul data-aos="fade-right"  data-aos-once="true" class="menu">
                     <li><a href="#ourstory">Our Story</a></li>
                     <li><a href="#venue">Venue</a></li>
                     <li><a href="#accommodation">Accommodation</a></li>
@@ -62,7 +62,7 @@
             </div>
         </nav>
         <!-- Section Banner -->
-        <section data-aos="zoom-out" id="banner">
+        <section data-aos="zoom-out"  data-aos-once="true" id="banner">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-12 pl-lg-0 pr-lg-0">
@@ -78,9 +78,9 @@
                 <div class="row">
                     <img class="img-fluid motif" src="images/icon-01.png" />
                     <div class="col-lg-7 pt-m-15p pb-m-10p pl-m-10p pr-m-10p pt-lg-5p pb-lg-5p pl-lg-5p pr-lg-5p">
-                        <img data-aos="flip-left" class="img-fluid w-lg-100p" src="images/images-02.png" />
+                        <img data-aos="flip-left" data-aos-once="true" class="img-fluid w-lg-100p" src="images/images-02.png" />
                     </div>
-                    <div data-aos="fade-up" class="col-lg-5 pt-m-0 pb-m-15p pl-m-10p pr-m-10p pt-lg-5p pb-lg-5p pl-lg-5p pr-lg-5p">
+                    <div data-aos="fade-up" data-aos-once="true" class="col-lg-5 pt-m-0 pb-m-15p pl-m-10p pr-m-10p pt-lg-5p pb-lg-5p pl-lg-5p pr-lg-5p">
                         <div class="boxc">
                             <h3>Our Story</h3>
                             <p>
@@ -100,7 +100,7 @@
                     <div class="col-lg-12 pt-m-20p pb-m-15p pl-m-10p pr-m-10p pt-lg-2p pb-lg-10p text-center">
                         <h3>Our Venue</h3>
                     </div>
-                    <div data-aos="fade-right" class="order-2 order-lg-1 col-lg-4 mb-m-0 pb-m-20p pl-m-10p pr-m-10p mb-lg-5p pl-lg-5p">
+                    <div data-aos="fade-right" data-aos-once="true" class="order-2 order-lg-1 col-lg-4 mb-m-0 pb-m-20p pl-m-10p pr-m-10p mb-lg-5p pl-lg-5p">
                         <h5 class="font-green ml-lg-5">Ceremony</h5>
                         <p class="ml-lg-5">
                             Saturday, <b>22th July 2020</b><br />
@@ -113,13 +113,13 @@
                             Dress code: <b>Casual Elegant</b>
                         </p>
                     </div>
-                    <div data-aos="flip-left" class="order-1 order-lg-2 col-lg-8 mb-m-0 pb-m-10p pl-m-10p pr-m-10p mb-lg-5p pr-lg-5p">
+                    <div data-aos="flip-left" data-aos-once="true" class="order-1 order-lg-2 col-lg-8 mb-m-0 pb-m-10p pl-m-10p pr-m-10p mb-lg-5p pr-lg-5p">
                         <img class="img-fluid images" src="images/images-03.png" />
                     </div>
-                    <div data-aos="flip-right"  class="order-3 order-lg-3 col-lg-8 pb-m-10p pl-m-10p pr-m-10p pl-lg-5p">
+                    <div data-aos="flip-right" data-aos-once="true"  class="order-3 order-lg-3 col-lg-8 pb-m-10p pl-m-10p pr-m-10p pl-lg-5p">
                         <img class="img-fluid images2" src="images/images-04.png" />
                     </div>
-                    <div data-aos="fade-left" class="order-4 order-lg-4 col-lg-4 pb-m-20p pl-m-10p pr-m-10p pl-lg-3p pr-lg-3p">
+                    <div data-aos="fade-left" data-aos-once="true" class="order-4 order-lg-4 col-lg-4 pb-m-20p pl-m-10p pr-m-10p pl-lg-3p pr-lg-3p">
                         <h5 class="font-green">Reception</h5>
                         <p>
                             Saturday, <b>22th July 2020</b><br />
@@ -140,8 +140,8 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="motif1"></div>
-                    <img data-aos="fade-up" class="img-fluid img-title" src="images/title.png" />
-                    <div class="wrap" data-aos="fade-left" >
+                    <img data-aos="fade-up" data-aos-once="true" class="img-fluid img-title" src="images/title.png" />
+                    <div class="wrap" data-aos="fade-left" data-aos-once="true" >
                         <p>
                             Your convenience is one of our concerns, we have booked you a room at this following place:
                         </p>
@@ -156,7 +156,7 @@
                         </div>
                     </div>
                     <div class="col-lg-12 pt-m-20p pb-m-50p pt-lg-5p pb-lg-10p pl-lg-0 pr-lg-0">
-                        <img data-aos="fade-up"  class="img-fluid images" src="images/images-05.png" />
+                        <img data-aos="fade-up" data-aos-once="true"  class="img-fluid images" src="images/images-05.png" />
                     </div>
                 </div>
             </div>
@@ -261,8 +261,8 @@
                     <img class="img-fluid motif" src="images/icon-06.png" />
                     <div class="col-lg-12 pt-m-20p pb-m-20p pl-m-10p pr-m-10p pt-lg-2p pb-lg-5p pl-lg-5p pr-lg-5p bg-grey">
                         <div class="title">
-                            <h2 data-aos="fade-left">RSVP</h2>
-                            <div data-aos="fade-left" class="boxc line"></div>
+                            <h2 data-aos="fade-left" data-aos-once="true">RSVP</h2>
+                            <div data-aos="fade-left" data-aos-once="true" class="boxc line"></div>
                         </div>
                         <form>
                             <div class="form-row">
