--- a/templates/template_wedding_victor/index.html
+++ b/templates/template_wedding_victor/index.html
@@ -28,13 +28,13 @@
             </a>
         </div>
     </div>
-    <div data-aos="fade-down" class="logo">
+    <div data-aos="fade-down" data-aos-once="true" class="logo">
         <img src="images/logo-12.png">
     </div>
     <div class="nav-victor">
         <div class="container-fluid">
             <div class="row d-none d-lg-flex">
-                <nav data-aos="fade-right" class="w-100 text-left menu" id="navbar-example">
+                <nav data-aos="fade-right" data-aos-once="true" class="w-100 text-left menu" id="navbar-example">
                     <ul class="list-unstyled">
                         <li class="mx-4">
                             <a href="#invite" class="nav-link active">
@@ -103,7 +103,7 @@
             </div>
         </div>
     </div>
-    <div data-aos="zoom-out" class="container-fluid header" id="invite">
+    <div data-aos="zoom-out" data-aos-once="true" class="container-fluid header" id="invite">
         <div class="row">
             <div class="content">
                     <p class="text-dgray">
@@ -141,7 +141,7 @@
                 </div>
         </div>
     </div>
-    <div data-aos="fade-up" class="container-fluid brief pt-5" id="story">
+    <div data-aos="fade-up" data-aos-once="true" class="container-fluid brief pt-5" id="story">
         <div class="row pt-5">
             <div class="col-lg-12 pt-5">
                 <p class="d-lg-none text-white mx-auto d-block px-5 text-center mt-5">
@@ -270,7 +270,7 @@
     </div>
   </div>
 </div>
-    <div data-aos="fade-up" class="container-fluid venue px-0 d-none d-lg-block" id="venue">
+    <div data-aos="fade-up" data-aos-once="true" class="container-fluid venue px-0 d-none d-lg-block" id="venue">
         <div class="venue-number">
             <h1 class="text-dgreen">
                 04
