--- a/templates/template_birthday_4/index.html
+++ b/templates/template_birthday_4/index.html
@@ -26,9 +26,9 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-3 d-none d-lg-block">
-                        <a href="index.html"><img data-aos="fade-right" class="img-fluid logo" src="images/logo.png" /></a>
+                        <a href="index.html"><img data-aos="fade-right"  data-aos-once="true" class="img-fluid logo" src="images/logo.png" /></a>
                     </div>
-                    <div data-aos="fade-left" class="col-lg-9 d-none d-lg-block">
+                    <div data-aos="fade-left"  data-aos-once="true" class="col-lg-9 d-none d-lg-block">
                         <ul class="menu">
                             <li><a href="#about">ABOUT</a></li>
                             <li><a href="#dateandplace">DATE & PLACE</a></li>
@@ -59,13 +59,13 @@
             </div>
         </nav>
         <!-- Section BANNER -->
-        <section data-aos="zoom-out" id="banner">
+        <section data-aos="zoom-out"  data-aos-once="true" id="banner">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-12 pl-lg-0 pr-lg-0">
                             <div class="box">
-                                <div data-aos="fade-up" class="subtitle">you are</div>
-                                <div data-aos="fade-up" class="title">Eagerly Invited</div>
+                                <div data-aos="fade-up"  data-aos-once="true" class="subtitle">you are</div>
+                                <div data-aos="fade-up" data-aos-once="true" class="title">Eagerly Invited</div>
                             </div>
                         <img class="img-fluid w-lg-100p d-none d-lg-block" src="images/images-01.png" />
                         <img class="img-fluid w-lg-100p d-block d-lg-none" src="images/mobile-images-01.png" />
@@ -82,24 +82,24 @@
                         <h1 class="mb-m-15p mb-lg-5p">Aaron’s <span>1<sup>st</sup></span> Birthday</h1>
                         <div class="gallery">
                             <div class="box">
-                                <img data-aos="fade-up"  class="img-fluid" src="images/images-02.png" data-toggle="modal" data-target="#images1" />
-                                <img data-aos="fade-up"  class="img-fluid horizontal" src="images/images-07.png" data-toggle="modal" data-target="#images2"/>
+                                <img data-aos="fade-up"  data-aos-once="true" class="img-fluid" src="images/images-02.png" data-toggle="modal" data-target="#images1" />
+                                <img data-aos="fade-up"   data-aos-once="true" class="img-fluid horizontal" src="images/images-07.png" data-toggle="modal" data-target="#images2"/>
                             </div>
                             <div class="box">
-                                <img data-aos="fade-up" class="img-fluid horizontal" src="images/images-03.png" data-toggle="modal" data-target="#images3" />
-                                <img data-aos="fade-up" class="img-fluid" src="images/images-08.png" data-toggle="modal" data-target="#images4" />
+                                <img data-aos="fade-up" data-aos-once="true" class="img-fluid horizontal" src="images/images-03.png" data-toggle="modal" data-target="#images3" />
+                                <img data-aos="fade-up" data-aos-once="true" class="img-fluid" src="images/images-08.png" data-toggle="modal" data-target="#images4" />
                             </div>
                             <div class="box">
-                                <img data-aos="fade-up" class="img-fluid" src="images/images-04.png"  data-toggle="modal" data-target="#images5" />
-                                <img data-aos="fade-up" class="img-fluid horizontal" src="images/images-09.png"  data-toggle="modal" data-target="#images6"/>
+                                <img data-aos="fade-up" data-aos-once="true" class="img-fluid" src="images/images-04.png"  data-toggle="modal" data-target="#images5" />
+                                <img data-aos="fade-up" data-aos-once="true" class="img-fluid horizontal" src="images/images-09.png"  data-toggle="modal" data-target="#images6"/>
                             </div>
                             <div class="box">
-                                <img data-aos="fade-up" class="img-fluid horizontal" src="images/images-05.png"  data-toggle="modal" data-target="#images7" />
-                                <img data-aos="fade-up" class="img-fluid" src="images/images-10.png"  data-toggle="modal" data-target="#images8" />
+                                <img data-aos="fade-up" data-aos-once="true" class="img-fluid horizontal" src="images/images-05.png"  data-toggle="modal" data-target="#images7" />
+                                <img data-aos="fade-up" data-aos-once="true" class="img-fluid" src="images/images-10.png"  data-toggle="modal" data-target="#images8" />
                             </div>
                             <div class="box">
-                                <img data-aos="fade-up" class="img-fluid" src="images/images-06.png"  data-toggle="modal" data-target="#images9" />
-                                <img data-aos="fade-up" class="img-fluid horizontal" src="images/images-11.png"  data-toggle="modal" data-target="#images10" />
+                                <img data-aos="fade-up" data-aos-once="true" class="img-fluid" src="images/images-06.png"  data-toggle="modal" data-target="#images9" />
+                                <img data-aos="fade-up" data-aos-once="true" class="img-fluid horizontal" src="images/images-11.png"  data-toggle="modal" data-target="#images10" />
                             </div>
                         </div>
                         <div class="mgallery d-block d-lg-none">
@@ -213,13 +213,13 @@
         <!-- Section DATE & PLACE -->
         <section id="dateandplace">
             <div class="container-fluid pt-m-45p pb-m-35p pt-lg-10p pb-lg-10p pl-lg-5p pr-lg-5p text-center bg-lightgreen">
-                <img data-aos="fade-left" class="img-fluid motif" src="images/motif-02.png" />
+                <img data-aos="fade-left" data-aos-once="true" class="img-fluid motif" src="images/motif-02.png" />
                 <img class="img-fluid d-block d-lg-none mmotif3" src="images/mobile-motif-03.png" />
                 <div class="row">
                     <div class="col-lg-12">
-                        <h3 data-aos="fade-down"  class="font-krub-r"><span>remember</span></h3>
-                        <h2 data-aos="fade-down" >the Time & Place</h2>
-                        <div data-aos="fade-up"  class="box mt-m-15p mt-lg-5p bg-white">
+                        <h3 data-aos="fade-down" data-aos-once="true"  class="font-krub-r"><span>remember</span></h3>
+                        <h2 data-aos="fade-down" data-aos-once="true" >the Time & Place</h2>
+                        <div data-aos="fade-up" data-aos-once="true"  class="box mt-m-15p mt-lg-5p bg-white">
                             <div class="row">
                                 <div class="col-lg-3 pt-m-15p pb-m-15p">
                                     <div class="boxc">
@@ -260,7 +260,7 @@
             <div class="container-fluid pt-m-35p pb-m-35p pt-lg-10p pb-lg-10p text-center">
                 <div  id="rsvp-d" class="row">
                     <div class="col-lg-12 mb-lg-10p">
-                        <h2 data-aos="fade-up" >
+                        <h2 data-aos="fade-up"  data-aos-once="true" >
                             Looking Forward<br/>
                             to Hear <span>Your</span> Response
                         </h2>
@@ -349,15 +349,15 @@
                         <img class="img-fluid d-none d-lg-block w-lg-100p" src="images/images-12.png" />
                         <img class="img-fluid bg d-block d-lg-none w-lg-100p" src="images/mobile-images-02.png" />
                         <div class="boxc text-center d-none">
-                            <div data-aos="fade-up"  class="subtitle">the</div>
-                            <div data-aos="fade-up"  class="title mb-lg-5p">Wish List</div>
-                            <div data-aos="fade-up" data-aos-offset="-50"  class="mb-lg-15p">
+                            <div data-aos="fade-up" data-aos-once="true"  class="subtitle">the</div>
+                            <div data-aos="fade-up" data-aos-once="true"  class="title mb-lg-5p">Wish List</div>
+                            <div data-aos="fade-up" data-aos-once="true" data-aos-offset="-50"  class="mb-lg-15p">
                                 <p>
                                     Confused of what to get for my birthday?<br />
                                     Say no more
                                 </p>
                             </div>
-                            <a data-aos="fade-up" data-aos-offset="-50"  class="button-default" href="wishlist.html">Wish List</a>
+                            <a data-aos="fade-up" data-aos-once="true" data-aos-offset="-50"  class="button-default" href="wishlist.html">Wish List</a>
                         </div>
                     </div>
                 </div>
