--- a/templates/template_wedding_1/index.html
+++ b/templates/template_wedding_1/index.html
@@ -23,7 +23,7 @@
     <div class="nav-wedding position-absolute">
         <div class="container-fluid py-lg-5">
             <div class="row d-none d-lg-block">
-                <div data-aos="fade-down" class="col-lg-12 text-center">
+                <div data-aos="fade-down"  data-aos-once="true" class="col-lg-12 text-center">
                     <ul class="list-unstyled">
                         <li class="mx-3">
                             <a href="#our-story">
@@ -116,7 +116,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-12 px-0 pb-lg-5">
-                <div data-aos="zoom-out" class="header d-none d-lg-block" style="background-image: url(images/banner-home-03.jpg); "></div>
+                <div data-aos="zoom-out"  data-aos-once="true" class="header d-none d-lg-block" style="background-image: url(images/banner-home-03.jpg); "></div>
                 <img class="img-fluid w-100 d-lg-none" src="images/banner-home-mobile-03.jpg">
             </div>
         </div>
@@ -124,18 +124,18 @@
     <div id="our-story" class="container-fluid our-story py-5 mb-5">
         <div class="row">
             <div class="col-lg-3 offset-lg-1 px-lg-0">
-                <div data-aos="fade-up">
+                <div data-aos="fade-up"  data-aos-once="true">
                 <h3 class="text-dgreen ml-0 d-none d-lg-block">
                     OUR STORY<br>
                     BEGINS
                 </h3>
                 </div>
-                <img  data-aos="fade-up" class="img-fluid image-title d-none d-lg-block" src="images/brief-home-14.jpg">
+                <img  data-aos="fade-up" data-aos-once="true" class="img-fluid image-title d-none d-lg-block" src="images/brief-home-14.jpg">
             </div>
             <div class="col-lg-4 px-4 px-lg-2">
-                <img data-aos="zoom-in-up" class="img-fluid ml-lg-4" src="images/brief-home-15.jpg">
+                <img data-aos="zoom-in-up" data-aos-once="true" class="img-fluid ml-lg-4" src="images/brief-home-15.jpg">
             </div>
-            <div data-aos="fade-left" class="col-lg-4 pr-lg-0 content-right">
+            <div data-aos="fade-left" data-aos-once="true" class="col-lg-4 pr-lg-0 content-right">
                 <div class="vertical-center w-100">
                     <h3 class="text-dgreen ml-4 d-lg-none mt-5">
                         OUR STORY<br>
@@ -160,7 +160,7 @@
                         <p class="text-gray font-weight-bold pl-lg-5 ml-lg-5 ml-4">
                             ABOUT THE GROOM
                         </p>
-                        <h1 data-aos="zoom-in-left" class="text-yellow title pl-lg-5 ml-lg-5 ml-4">
+                        <h1 data-aos="zoom-in-left" data-aos-once="true" class="text-yellow title pl-lg-5 ml-lg-5 ml-4">
                             BRUCE<br>
                             WAYNE
                         </h1>
@@ -172,7 +172,7 @@
 
                         </p>
                     </div>
-                    <div data-aos="fade-left" class="col-lg-7 pr-lg-0 order-lg-2 order-1 pl-4 pl-lg-2">
+                    <div data-aos="fade-left" data-aos-once="true" class="col-lg-7 pr-lg-0 order-lg-2 order-1 pl-4 pl-lg-2">
                         <img class="img-fluid d-none d-lg-block w-100" src="images/about-us-bruce-18.png">
                         <img class="img-fluid d-lg-none" src="images/about-us-bruce-09.png">
                     </div>
@@ -220,13 +220,13 @@
     </div>
     <div id="come" class="container-fluid when-section">
         <div class="row d-none d-lg-flex">
-            <div data-aos="fade-right" class="col-lg-1 px-lg-0">
+            <div data-aos="fade-right" data-aos-once="true" class="col-lg-1 px-lg-0">
                 <p class="text-white title-1">
                     WHEN
                 </p>
             </div>
             <div class="col-lg-5 px-lg-5 content">
-                <img data-aos="fade-down" class="img-fluid image-left" src="images/when-and-where-08.jpg">
+                <img data-aos="fade-down" data-aos-once="true" class="img-fluid image-left" src="images/when-and-where-08.jpg">
                 <h3 class="text-dgreen mt-lg-5 mb-lg-4">
                     CATHEDRAL CHURCH
                 </h3>
@@ -264,9 +264,9 @@
                     SEE LOCATION
                 </a>
                 </div>
-                <img data-aos="fade-up" class="img-fluid image-right" src="images/when-and-where-09.jpg">
+                <img data-aos="fade-up" data-aos-once="true" class="img-fluid image-right" src="images/when-and-where-09.jpg">
             </div>
-            <div data-aos="fade-left" class="col-lg-1 px-lg-0 overflow-hidden">
+            <div data-aos="fade-left" data-aos-once="true" class="col-lg-1 px-lg-0 overflow-hidden">
                 <p class="text-white title-2">
                     WHERE
                 </p>
@@ -331,9 +331,9 @@
     <div id="accommodation" class="container-fluid accomodation">
         <div class="row d-none d-lg-flex">
             <div class="col-lg-5 pl-lg-0">
-                <img data-aos="flip-up" class="img-fluid ml-lg-5 pl-lg-5" src="images/accomodation-images-05.png">
+                <img data-aos="flip-up"  data-aos-once="true" class="img-fluid ml-lg-5 pl-lg-5" src="images/accomodation-images-05.png">
             </div>
-            <div data-aos="slide-left" class="col-lg-6 offset-lg-1 pr-lg-0 text-right">
+            <div data-aos="slide-left" data-aos-once="true" class="col-lg-6 offset-lg-1 pr-lg-0 text-right">
                 <p class="text-gray font-weight-bold mr-lg-5 pr-lg-5">
                     ABOUT THE<br>
                     ACCOMMODATION
@@ -384,14 +384,14 @@
         </div>
     </div>
     <div id="gallery" class="container-fluid our-gallery">
-        <div  data-aos="fade-up" class="row">
+        <div  data-aos="fade-up" data-aos-once="true" class="row">
             <div class="col-lg-12 text-center">
                 <h3 class="text-dgreen my-lg-5 mb-5">
                     OUR GALLERY
                 </h3>
             </div>
         </div>
-        <div  data-aos="fade-down" class="row">
+        <div  data-aos="fade-down" data-aos-once="true" class="row">
             <div class="col-lg-12 px-lg-0 px-4">
                 <div class="carousel-gallery owl-theme">
                     <div class="item">
@@ -416,7 +416,7 @@
                 </h4>
             </div>
             <div class="col-lg-12 pb-3 pb-lg-0">
-                <div data-aos="fade-up" data-aos-offset="-1050">
+                <div data-aos="fade-up" data-aos-once="true" data-aos-offset="-1050">
                 <div class="row">
                     <div class="text-white col-lg-2 col-3 offset-lg-2 text-center">
                         <p class="count font-oswald-extralight" id="days"></p>
