--- a/templates/template_wedding_6/index.html
+++ b/templates/template_wedding_6/index.html
@@ -29,9 +29,9 @@
             <nav>
                 <div class="d-none d-lg-block">
                     <a class="logo" href="index.html">
-                        <img data-aos="fade-down" class="img-fluid" src="images/logo.png" />
+                        <img data-aos="fade-down" data-aos-once="true" class="img-fluid" src="images/logo.png" />
                     </a>
-                    <ul data-aos="fade-right" class="menu">
+                    <ul data-aos="fade-right"  data-aos-once="true" class="menu">
                         <li><a href="#home">HOME</a></li>
                         <li><a href="#ourstory">OUR STORY</a></li>
                         <li><a href="#dateandtime-d">DATE & TIME</a></li>
@@ -78,10 +78,10 @@
                         <div class="container-fluid">
                             <div class="row">
                                 <div class="col-lg-12 pl-lg-0 pr-lg-0">
-                                    <img data-aos="zoom-out"  class="img-fluid bg w-lg-100p" src="images/background-01.png" />
-                                    <img data-aos="fade-down"  class="img-fluid motif" src="images/logo-02.png" />
+                                    <img data-aos="zoom-out"  data-aos-once="true"  class="img-fluid bg w-lg-100p" src="images/background-01.png" />
+                                    <img data-aos="fade-down" data-aos-once="true"  class="img-fluid motif" src="images/logo-02.png" />
                                     <div class="boxc text-center">
-                                        <div data-aos="fade-down" class="title">Tying the knot with my <b>favorite person</b></div>
+                                        <div data-aos="fade-down" data-aos-once="true" class="title">Tying the knot with my <b>favorite person</b></div>
                                     </div>
                                     <a id="chevron-down" class="gobot" href="#ourstory"><img class="img-fluid" src="images/arrow-down.png" /></a>
                                 </div>
@@ -109,11 +109,11 @@
                                             <div class="container-fluid">
                                                 <div class="row">
                                                     <img class="img-fluid boxc text-center motif" src="images/icon-01.png" />
-                                                    <div data-aos="fade-up" class="col-lg-6 pl-lg-0 pr-lg-0">
+                                                    <div data-aos="fade-up" data-aos-once="true" class="col-lg-6 pl-lg-0 pr-lg-0">
                                                         <img class="img-fluid w-lg-100p" src="images/images-01.png" />
                                                     </div>
                                                     <div data-aos="fade-left" class="col-lg-6 pl-lg-0 pr-lg-0 bg-brown">
-                                                        <div class="boxc desc">
+                                                        <div class="boxc desc" data-aos-once="true">
                                                             <h2 class="mb-lg-10p">OUR <br /><span>STORY</span></h2>
                                                             <p>We’ve been spenting time together for the past 6 years, and we can’t be more grateful to be unite back when we are studying together in China.</p>
                                                             <p>But right now we just want to celebrate our journey to become husband and wives, as we’ve been through so much together, e wwanted to start a new journey to become more than just a couple, a family that wwill alwways stays together.</p>
@@ -219,7 +219,7 @@
                         <div class="container-fluid bg-cream pt-lg-5p pb-lg-5p">
                             <div id="dateandtime-d" class="row">
                                 <div class="col-lg-12 pt-m-15p pb-m-50p pl-m-10p pr-m-10p pl-lg-0 pr-lg-0">
-                                    <ul data-aos="fade-up" data-aos-offset="-200" class="nav nav-tabs" id="myTab2" role="tablist">
+                                    <ul data-aos="fade-up" data-aos-once="true" data-aos-offset="-200" class="nav nav-tabs" id="myTab2" role="tablist">
                                         <li class="nav-item">
                                             <a class="nav-link" id="tabweddingceremony-tab" data-toggle="tab" href="#tabweddingceremony" role="tab" aria-controls="tabweddingceremony">WEDDING CEREMONY</a>
                                         </li>
@@ -231,7 +231,7 @@
                                         <div class="tab-pane fadein" id="tabweddingceremony" role="tabpanel" aria-labelledby="tabweddingceremony-tab">
                                             <div class="container-fluid">
                                                 <div class="row">
-                                                    <div data-aos="fade-right" class="order-2 order-lg-1 col-lg-5 pt-m-10p pb-m-0 pl-m-0 pr-m-0 pl-lg-5p pr-lg-5p">
+                                                    <div data-aos="fade-right" data-aos-once="true" class="order-2 order-lg-1 col-lg-5 pt-m-10p pb-m-0 pl-m-0 pr-m-0 pl-lg-5p pr-lg-5p">
                                                         <img class="img-fluid motif mb-lg-15p" src="images/icon-04.png" />
                                                         <h2 class="font-lightbrown mb-lg-10p">WEDDING <br /><span>CEREMONY</span></h2>
                                                         <div class="row">
@@ -247,7 +247,7 @@
                                                             </div>
                                                         </div>
                                                     </div>
-                                                    <div id="dateandtime-d" data-aos="fade-down" data-aos-offset="200" class="order-1 order-lg-2 col-lg-7 pt-m-0 pb-m-0 pl-m-0 pr-m-0 pl-lg-5p pr-lg-5p">
+                                                    <div id="dateandtime-d" data-aos="fade-down" data-aos-once="true" data-aos-offset="200" class="order-1 order-lg-2 col-lg-7 pt-m-0 pb-m-0 pl-m-0 pr-m-0 pl-lg-5p pr-lg-5p">
                                                         <div class="wrap">
                                                             <img class="img-fluid images w-lg-100p" src="images/images-04.png" />
                                                             <div class="boxc imagelist"></div>
@@ -309,12 +309,12 @@
                     <section id="accommodation">
                         <div class="container-fluid bg-lightbrown">
                             <div class="row">
-                                <div data-aos="zoom-out" class="col-lg-12 pl-lg-0 pr-lg-0">
+                                <div data-aos="zoom-out" data-aos-once="true" class="col-lg-12 pl-lg-0 pr-lg-0">
                                     <img class="img-fluid w-lg-100p d-none d-lg-block" src="images/images-07.png" />
                                     <img class="img-fluid images w-lg-100p d-block d-lg-none" src="images/images-16.png" />
                                 </div>
                                 <div class="col-lg-8 pt-m-10p pl-m-10p pr-m-10p pt-lg-5p pb-lg-5p pl-lg-5p pr-lg-0">
-                                    <h2 data-aos="fade-right">THE <br /><span>ACCOMMODATION</span></h2>
+                                    <h2 data-aos="fade-right" data-aos-once="true">THE <br /><span>ACCOMMODATION</span></h2>
                                 </div>
                                 <div class="col-lg-4 pb-m-10p pl-m-10p pr-m-10p pt-lg-5p pb-lg-5p pl-lg-0 pr-lg-5p">
                                     <h4>HOTEL MULIA BALI</h4>
@@ -386,7 +386,7 @@
                                 </div>
                                 <div class="col-lg-12 d-none d-lg-block">
                                     <div class="row">
-                                        <div data-aos="fade-up" class="col-4 col-lg-4 pl-lg-0 pr-lg-0">
+                                        <div data-aos="fade-up" data-aos-once="true" class="col-4 col-lg-4 pl-lg-0 pr-lg-0">
                                             <img class="img-fluid w-lg-100p" src="images/images-08.png" />
                                             <a data-toggle="modal" data-target="#images-08">
                                                 <div class="boxc imageov">
@@ -395,7 +395,7 @@
                                                 </div>
                                             </a>
                                         </div>
-                                        <div data-aos="fade-up" class="col-4 col-lg-4 pl-lg-0 pr-lg-0">
+                                        <div data-aos="fade-up" data-aos-once="true" class="col-4 col-lg-4 pl-lg-0 pr-lg-0">
                                             <img class="img-fluid w-lg-100p" src="images/images-09.png" />
                                             <a data-toggle="modal" data-target="#images-09">
                                                 <div class="boxc imageov">
@@ -404,7 +404,7 @@
                                                 </div>
                                             </a>
                                         </div>
-                                        <div data-aos="fade-up" class="col-4 col-lg-4 pl-lg-0 pr-lg-0">
+                                        <div data-aos="fade-up" data-aos-once="true" class="col-4 col-lg-4 pl-lg-0 pr-lg-0">
                                             <img class="img-fluid w-lg-100p" src="images/images-10.png" />
                                             <a data-toggle="modal" data-target="#images-10">
                                                 <div class="boxc imageov">
@@ -413,7 +413,7 @@
                                                 </div>
                                             </a>
                                         </div>
-                                        <div data-aos="fade-up" class="col-4 col-lg-4 pl-lg-0 pr-lg-0">
+                                        <div data-aos="fade-up" data-aos-once="true" class="col-4 col-lg-4 pl-lg-0 pr-lg-0">
                                             <img class="img-fluid w-lg-100p" src="images/images-11.png" />
                                             <a data-toggle="modal" data-target="#images-11">
                                                 <div class="boxc imageov">
@@ -422,7 +422,7 @@
                                                 </div>
                                             </a>
                                         </div>
-                                        <div data-aos="fade-up" class="col-4 col-lg-4 pl-lg-0 pr-lg-0">
+                                        <div data-aos="fade-up" data-aos-once="true" class="col-4 col-lg-4 pl-lg-0 pr-lg-0">
                                             <img class="img-fluid w-lg-100p" src="images/images-12.png" />
                                             <a data-toggle="modal" data-target="#images-12">
                                                 <div class="boxc imageov">
@@ -431,7 +431,7 @@
                                                 </div>
                                             </a>
                                         </div>
-                                        <div data-aos="fade-up" class="col-4 col-lg-4 pl-lg-0 pr-lg-0">
+                                        <div data-aos="fade-up" data-aos-once="true" class="col-4 col-lg-4 pl-lg-0 pr-lg-0">
                                             <img class="img-fluid w-lg-100p" src="images/images-13.png" />
                                             <a data-toggle="modal" data-target="#images-13">
                                                 <div class="boxc imageov">
@@ -578,9 +578,9 @@
                         <div class="container-fluid">
                             <div class="row">
                                 <div class="col-lg-12 pl-m-10p pr-m-10p pt-lg-10p pb-lg-10p pl-lg-10p pr-lg-10p">
-                                    <h2 data-aos="fade-right"  class="mb-m-10p mb-lg-15p font-lightbrown">CAN’T WAIT TO <br /><span>SEE YOU THERE!</span></h2>
+                                    <h2 data-aos="fade-right" data-aos-once="true"  class="mb-m-10p mb-lg-15p font-lightbrown">CAN’T WAIT TO <br /><span>SEE YOU THERE!</span></h2>
                                     <img class="img-fluid motif" src="images/icon-06.png" />
-                                    <img data-aos="fade-up" class="img-fluid images" src="images/images-15.png" />
+                                    <img data-aos="fade-up" data-aos-once="true" class="img-fluid images" src="images/images-15.png" />
                                     <form>
                                         <div class="row">
                                             <div class="col-lg-12 mb-lg-2p">
